# EdgeScribe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  feature-design.md
.claude/: Claude.md
.github/: copilot-instructions.md
.github/workflows/: build-macos.yml  build-windows.yml  build.yml  ci.yml  release.yml
doc/: GTM.md  RAM-memory-management.md  assistant-experience.md  cloud-api-enterprise.md  context_window.md  demo.md  deployment.md  fine-tune.md  gpu-backend.md  kv-cache-ctx.md  kv-cache-optimization.md  llama-cpp-integration.md  llmware-analysis.md  memory.md  moat.md  monetization.md  native-desktop-app.md  ort-llama-cpp.md  rag.md  report-generation.md  ui-improvement.md  webview-integration.md  workflow-pipelines.md
doc/backend/: api-reference.md  architecture.md
doc/frontend/: design.md
include/: README.md
include/webview/: README.md
installer/windows/: edgescribe.iss
src/asr/: audio_capture.cpp  audio_capture.h  audio_file.cpp  audio_file.h  diarizer.cpp  diarizer.h  transcriber.cpp  transcriber.h
src/cli/: main.cpp
src/core/: memory_store.cpp  memory_store.h  model_manager.cpp  model_manager.h
src/gui/: gui_launcher.cpp  gui_launcher.h
src/llm/: llm_engine.cpp  llm_engine.h
src/server/: api_server.cpp  api_server.h
src/tts/: kokoro_vocab.h  phonemizer.cpp  phonemizer.h  tts_engine.cpp  tts_engine.h
src/vision/: vision_engine.cpp  vision_engine.h
www/: index.html
www/css/: style.css
www/js/: api.js  app.js
